--- a/index.html
+++ b/index.html
@@ -1,124 +1,316 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>The game changes.</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!doctype html>
+<html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mentoria de Inglês</title>
 
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
-  <script defer src="/_vercel/insights/script.js"></script>
+    <!-- Tailwind CDN -->
+    <script src="https://cdn.tailwindcss.com"></script>
 
-  <style>
-    :root {
-      --bg: #0b0b0c;
-      --text: #f5f5f5;
-      --muted: #9a9a9a;
-      --accent: #25D366;
-    }
+    <!-- Tailwind custom config (equivale ao tailwind.config.js) -->
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              background: "hsl(240 10% 3.9%)",
+              foreground: "hsl(0 0% 98%)",
+              muted: "hsl(240 3.7% 15.9%)",
+              card: "hsl(240 10% 6%)",
+              border: "hsl(240 3.7% 15.9%)",
+              "glow-purple": "hsl(270 80% 60%)",
+              "glow-purple-light": "hsl(270 80% 70%)",
+              "glow-purple-dark": "hsl(270 80% 45%)",
+            },
+            animation: {
+              float: "float 6s ease-in-out infinite",
+              "fade-up": "fadeUp 0.8s ease forwards",
+              "pulse-glow": "pulseGlow 2s ease-in-out infinite",
+            },
+            keyframes: {
+              float: {
+                "0%,100%": { transform: "translateY(0)" },
+                "50%": { transform: "translateY(-20px)" },
+              },
+              fadeUp: {
+                from: { opacity: 0, transform: "translateY(20px)" },
+                to: { opacity: 1, transform: "translateY(0)" },
+              },
+              pulseGlow: {
+                "0%,100%": { opacity: 0.6 },
+                "50%": { opacity: 1 },
+              },
+            },
+          },
+        },
+      };
+    </script>
 
-    * {
-      box-sizing: border-box;
-    }
+    <!-- CSS custom para efeitos que Tailwind CDN não cobre -->
+    <style>
+      .bg-gradient-radial-purple {
+        background: radial-gradient(
+          circle at center,
+          rgba(168, 85, 247, 0.25),
+          transparent 70%
+        );
+      }
 
-    body {
-      margin: 0;
-      font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
-      background-color: var(--bg);
-      color: var(--text);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-    }
+      .border-gradient-purple {
+        border: 1px solid transparent;
+        background:
+          linear-gradient(#000, #000) padding-box,
+          linear-gradient(90deg, #a855f7, #9333ea) border-box;
+      }
 
-    .container {
-      width: 100%;
-      max-width: 760px;
-      padding: 40px 24px;
-      text-align: center;
-    }
+      .glow-purple {
+        box-shadow: 0 0 40px rgba(168, 85, 247, 0.45);
+      }
 
-    h1 {
-      font-size: clamp(2.2rem, 5vw, 3rem);
-      font-weight: 500;
-      letter-spacing: -0.02em;
-      margin-bottom: 32px;
-    }
+      .glow-purple-text {
+        text-shadow: 0 0 30px rgba(168, 85, 247, 0.6);
+      }
+    </style>
+  </head>
 
-    .video-wrapper {
-      position: relative;
-      padding-bottom: 56.25%;
-      height: 0;
-      border-radius: 14px;
-      overflow: hidden;
-      background-color: #000;
-      margin-bottom: 36px;
-    }
+  <body class="bg-background text-foreground overflow-x-hidden">
+    <!-- HERO -->
+    <section
+      class="relative min-h-screen flex items-center justify-center overflow-hidden"
+    >
+      <div class="absolute inset-0 bg-gradient-radial-purple"></div>
 
-    .video-wrapper iframe {
-      position: absolute;
-      inset: 0;
-      width: 100%;
-      height: 100%;
-      border: none;
-    }
+      <div
+        class="absolute top-1/4 left-1/4 w-96 h-96 bg-glow-purple/10 rounded-full blur-3xl animate-float"
+      ></div>
+      <div
+        class="absolute bottom-1/4 right-1/4 w-80 h-80 bg-glow-purple/5 rounded-full blur-3xl animate-float"
+      ></div>
 
-    .whatsapp-button {
-      display: inline-flex;
-      align-items: center;
-      gap: 12px;
-      padding: 16px 34px;
-      font-size: 1rem;
-      font-weight: 500;
-      color: #0b0b0c;
-      text-decoration: none;
-      background-color: var(--accent);
-      border-radius: 999px;
-      transition: all 0.2s ease;
-    }
+      <div class="relative z-10 max-w-4xl mx-auto text-center px-6">
+        <div
+          class="inline-flex items-center gap-2 px-4 py-2 rounded-full border-gradient-purple bg-card/50 backdrop-blur mb-8 animate-fade-up"
+        >
+          <span
+            class="w-2 h-2 bg-glow-purple rounded-full animate-pulse"
+          ></span>
+          <span class="text-sm text-muted">Mentoria exclusiva</span>
+        </div>
 
-    .whatsapp-button svg {
-      width: 20px;
-      height: 20px;
-      fill: currentColor;
-    }
+        <h1
+          class="text-4xl md:text-6xl lg:text-7xl font-bold leading-tight mb-6 animate-fade-up"
+        >
+          Pare de estudar inglês.<br />
+          <span class="text-glow-purple glow-purple-text">Comece a falar.</span>
+        </h1>
 
-    .whatsapp-button:hover {
-      filter: brightness(1.05);
-      transform: translateY(-1px);
-    }
-  </style>
-</head>
-<body>
+        <p class="text-lg md:text-xl text-gray-400 max-w-2xl mx-auto mb-10">
+          Um método direto, prático e individual para resultados reais — sem
+          enrolação.
+        </p>
 
-  <div class="container">
-    <h1>Quem fala inglês joga outro jogo</h1>
-    <p>Essa mentoria existe para te colocar nele — sem atalhos, sem ansiedade e sem estudar à toa.</p>
+        <a
+          href="https://wa.me/5515981298236?text=Ol%C3%A1%2C%20quero%20conhecer%20mais%20sobre%20a%20mentoria"
+          target="_blank"
+          class="inline-block bg-gradient-to-r from-glow-purple-light via-glow-purple to-glow-purple-dark text-white font-bold px-10 py-4 rounded-xl transition transform hover:scale-105 glow-purple"
+        >
+          Quero destravar meu inglês →
+        </a>
+      </div>
+    </section>
+    <!-- VIDEO / COMO FUNCIONA -->
+    <section class="relative overflow-hidden py-32">
+      <div class="absolute inset-0 bg-gradient-radial-purple opacity-30"></div>
 
-    <div class="video-wrapper">
-      <iframe
-        src="https://www.youtube.com/embed/VpnTenfkSSk"
-        title="Mentoria"
-        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen>
-      </iframe>
-    </div>
+      <div class="relative z-10 max-w-5xl mx-auto px-6 text-center">
+        <h2 class="text-3xl md:text-5xl font-bold mb-4">
+          Assista e entenda
+          <span class="text-glow-purple glow-purple-text">como funciona</span>
+        </h2>
 
-    <a
-      class="whatsapp-button"
-      href="https://wa.me/5515981298236?text=Ol%C3%A1%2C%20quero%20conhecer%20mais%20sobre%20a%20mentoria"
-      target="_blank"
-      rel="noopener noreferrer">
+        <p class="text-gray-400 max-w-2xl mx-auto mb-16">
+          Em poucos minutos você vai descobrir por que essa mentoria é diferente
+          de tudo que você já tentou.
+        </p>
 
-      <!-- WhatsApp Icon -->
-      <svg viewBox="0 0 32 32" aria-hidden="true">
-        <path d="M19.11 17.2c-.29-.15-1.7-.84-1.97-.94-.27-.1-.46-.15-.66.15s-.76.94-.93 1.13c-.17.19-.34.22-.63.07-.29-.15-1.22-.45-2.33-1.43-.86-.77-1.44-1.72-1.61-2.01-.17-.29-.02-.45.13-.6.13-.13.29-.34.44-.51.15-.17.2-.29.29-.49.1-.2.05-.37-.02-.52-.07-.15-.66-1.59-.91-2.18-.24-.58-.49-.5-.66-.51-.17-.01-.37-.01-.56-.01s-.52.07-.79.37c-.27.29-1.04 1.02-1.04 2.49s1.06 2.89 1.2 3.09c.15.2 2.08 3.17 5.04 4.44.7.3 1.25.48 1.68.62.7.22 1.34.19 1.84.12.56-.08 1.7-.69 1.94-1.36.24-.66.24-1.23.17-1.36-.07-.13-.27-.2-.56-.34zM16 3C8.83 3 3 8.82 3 15.99c0 2.82.74 5.44 2.02 7.7L3 29l5.46-1.96A12.9 12.9 0 0 0 16 29c7.17 0 13-5.82 13-12.99C29 8.82 23.17 3 16 3z"/>
-      </svg>
+        <div
+          class="relative rounded-[30px] border-gradient-purple bg-card p-6 shadow-2xl transform rotateX-[20deg] scale-105"
+          style="perspective: 1000px"
+        >
+          <div
+            class="relative rounded-2xl overflow-hidden border border-border aspect-video bg-black"
+          >
+            <iframe
+              class="w-full h-full"
+              src="https://www.youtube.com/embed/VpnTenfkSSk?rel=0&modestbranding=1"
+              title="Mentoria de Inglês"
+              frameborder="0"
+              allow="
+                accelerometer;
+                autoplay;
+                clipboard-write;
+                encrypted-media;
+                gyroscope;
+                picture-in-picture;
+              "
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
+      </div>
+    </section>
 
-      Conversar no WhatsApp
-    </a>
-  </div>
+    <!-- DIFERENCIAIS -->
+    <section class="relative py-32">
+      <div class="absolute inset-0 bg-gradient-radial-purple opacity-40"></div>
 
-</body>
+      <div class="relative z-10 max-w-6xl mx-auto px-6">
+        <div class="text-center max-w-2xl mx-auto mb-20">
+          <h2 class="text-3xl md:text-5xl font-bold mb-4">
+            Por que essa mentoria
+            <span class="text-glow-purple glow-purple-text">funciona?</span>
+          </h2>
+          <p class="text-gray-400">
+            Um método pensado para quem quer resultado, não certificado.
+          </p>
+        </div>
+
+        <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-6">
+          <!-- Card -->
+          <div
+            class="group p-6 rounded-2xl border-gradient-purple bg-card/40 backdrop-blur transition hover:bg-card/60"
+          >
+            <div
+              class="w-12 h-12 mb-4 rounded-xl bg-glow-purple/20 flex items-center justify-center"
+            >
+              🎯
+            </div>
+            <h3 class="font-semibold mb-2">Método direto</h3>
+            <p class="text-sm text-gray-400">
+              Sem rodeios. Você aprende o que realmente importa para falar.
+            </p>
+          </div>
+
+          <div
+            class="group p-6 rounded-2xl border-gradient-purple bg-card/40 backdrop-blur transition hover:bg-card/60"
+          >
+            <div
+              class="w-12 h-12 mb-4 rounded-xl bg-glow-purple/20 flex items-center justify-center"
+            >
+              👤
+            </div>
+            <h3 class="font-semibold mb-2">Acompanhamento</h3>
+            <p class="text-sm text-gray-400">
+              Feedback individual focado na sua evolução.
+            </p>
+          </div>
+
+          <div
+            class="group p-6 rounded-2xl border-gradient-purple bg-card/40 backdrop-blur transition hover:bg-card/60"
+          >
+            <div
+              class="w-12 h-12 mb-4 rounded-xl bg-glow-purple/20 flex items-center justify-center"
+            >
+              📈
+            </div>
+            <h3 class="font-semibold mb-2">Evolução rápida</h3>
+            <p class="text-sm text-gray-400">
+              Resultados perceptíveis em poucas semanas.
+            </p>
+          </div>
+
+          <div
+            class="group p-6 rounded-2xl border-gradient-purple bg-card/40 backdrop-blur transition hover:bg-card/60"
+          >
+            <div
+              class="w-12 h-12 mb-4 rounded-xl bg-glow-purple/20 flex items-center justify-center"
+            >
+              💬
+            </div>
+            <h3 class="font-semibold mb-2">Inglês real</h3>
+            <p class="text-sm text-gray-400">
+              Aprenda o que você realmente vai usar no dia a dia.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- MÉTODO -->
+    <section class="relative py-32 overflow-hidden">
+      <div
+        class="absolute left-0 top-1/2 w-96 h-96 bg-glow-purple/10 rounded-full blur-3xl"
+      ></div>
+      <div
+        class="absolute right-0 top-1/4 w-64 h-64 bg-glow-purple/10 rounded-full blur-3xl"
+      ></div>
+
+      <div class="relative z-10 max-w-4xl mx-auto px-6 text-center">
+        <h2 class="text-3xl md:text-5xl font-bold mb-6">
+          O diferencial está no
+          <span class="text-glow-purple glow-purple-text">método</span>
+        </h2>
+
+        <p class="text-gray-400 mb-12">
+          Não é mais um curso genérico. É uma mentoria pensada para destravar
+          sua comunicação.
+        </p>
+
+        <div class="grid sm:grid-cols-2 gap-4 text-left">
+          <div
+            class="p-4 rounded-xl border-gradient-purple bg-card/40 flex gap-3"
+          >
+            ✔ Método validado por alunos reais
+          </div>
+          <div
+            class="p-4 rounded-xl border-gradient-purple bg-card/40 flex gap-3"
+          >
+            ✔ Foco em resultado, não horas
+          </div>
+          <div
+            class="p-4 rounded-xl border-gradient-purple bg-card/40 flex gap-3"
+          >
+            ✔ Aprendizado direto ao ponto
+          </div>
+          <div
+            class="p-4 rounded-xl border-gradient-purple bg-card/40 flex gap-3"
+          >
+            ✔ Evolução no seu ritmo
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- CTA FINAL -->
+    <section class="relative py-32">
+      <div class="absolute inset-0 bg-gradient-radial-purple opacity-60"></div>
+
+      <div class="relative z-10 max-w-3xl mx-auto px-6 text-center">
+        <h2 class="text-4xl md:text-6xl font-bold mb-6">
+          Pronto para dar o
+          <span class="text-glow-purple glow-purple-text">próximo passo?</span>
+        </h2>
+
+        <p class="text-gray-400 mb-10">Sua fluência começa com uma conversa.</p>
+
+        <a
+          href="https://wa.me/5515981298236?text=Ol%C3%A1%2C%20quero%20conhecer%20mais%20sobre%20a%20mentoria"
+          target="_blank"
+          class="inline-block bg-gradient-to-r from-glow-purple-light via-glow-purple to-glow-purple-dark text-white font-bold px-10 py-4 rounded-xl transition transform hover:scale-105 glow-purple"
+        >
+          💬 Fale comigo agora
+        </a>
+
+        <p class="text-sm text-gray-500 mt-6">Resposta rápida pelo WhatsApp</p>
+      </div>
+    </section>
+
+    <!-- FOOTER -->
+    <footer
+      class="py-8 border-t border-border/50 text-center text-sm text-gray-500"
+    >
+      © 2026 Mentoria de Inglês. Todos os direitos reservados.
+    </footer>
+  </body>
 </html>
