--- a/index.html
+++ b/index.html
@@ -75,7 +75,60 @@
   </head>
 
   <body class="bg-background text-foreground overflow-x-hidden">
-    <!-- HERO -->
+    <section class="relative overflow-hidden py-2">
+      <div class="absolute inset-0 bg-gradient-radial-purple opacity-30"></div>
+
+      <div class="relative z-10 max-w-5xl mx-auto px-6 text-center">
+        <h2 class="text-3xl md:text-5xl font-bold mb-4">
+          Quem fala inglês
+          <span class="text-glow-purple glow-purple-text"
+            >joga outro jogo.</span
+          >
+        </h2>
+
+        <p class="text-gray-400 max-w-2xl mx-auto mb-12">
+          Em poucos minutos você vai descobrir por que essa mentoria é diferente
+          de tudo que você já tentou.
+        </p>
+
+        <div
+          class="relative max-w-3xl mx-auto rounded-[24px] border-gradient-purple bg-card p-4 shadow-xl mb-6"
+          style="perspective: 1000px"
+        >
+          <div
+            class="relative rounded-2xl overflow-hidden border border-border aspect-video bg-black"
+          >
+            <iframe
+              class="w-full h-full"
+              src="https://www.youtube.com/embed/VpnTenfkSSk?rel=0&modestbranding=1"
+              title="Mentoria de Inglês"
+              frameborder="0"
+              allow="
+                accelerometer;
+                autoplay;
+                clipboard-write;
+                encrypted-media;
+                gyroscope;
+                picture-in-picture;
+              "
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
+
+        <!-- BOTÃO CENTRALIZADO -->
+        <div class="flex justify-center mt-2">
+          <a
+            href="https://wa.me/5515981298236?text=Ol%C3%A1%2C%20quero%20conhecer%20mais%20sobre%20a%20mentoria"
+            target="_blank"
+            class="inline-block bg-gradient-to-r from-glow-purple-light via-glow-purple to-glow-purple-dark text-white font-bold px-10 py-4 rounded-xl transition transform hover:scale-105 glow-purple mt-3 mb-10"
+          >
+            💬 Fale comigo agora
+          </a>
+        </div>
+      </div>
+    </section>
+
     <section
       class="relative min-h-screen flex items-center justify-center overflow-hidden"
     >
@@ -117,47 +170,6 @@
         >
           Quero destravar meu inglês →
         </a>
-      </div>
-    </section>
-    <!-- VIDEO / COMO FUNCIONA -->
-    <section class="relative overflow-hidden py-32">
-      <div class="absolute inset-0 bg-gradient-radial-purple opacity-30"></div>
-
-      <div class="relative z-10 max-w-5xl mx-auto px-6 text-center">
-        <h2 class="text-3xl md:text-5xl font-bold mb-4">
-          Assista e entenda
-          <span class="text-glow-purple glow-purple-text">como funciona</span>
-        </h2>
-
-        <p class="text-gray-400 max-w-2xl mx-auto mb-16">
-          Em poucos minutos você vai descobrir por que essa mentoria é diferente
-          de tudo que você já tentou.
-        </p>
-
-        <div
-          class="relative rounded-[30px] border-gradient-purple bg-card p-6 shadow-2xl transform rotateX-[20deg] scale-105"
-          style="perspective: 1000px"
-        >
-          <div
-            class="relative rounded-2xl overflow-hidden border border-border aspect-video bg-black"
-          >
-            <iframe
-              class="w-full h-full"
-              src="https://www.youtube.com/embed/VpnTenfkSSk?rel=0&modestbranding=1"
-              title="Mentoria de Inglês"
-              frameborder="0"
-              allow="
-                accelerometer;
-                autoplay;
-                clipboard-write;
-                encrypted-media;
-                gyroscope;
-                picture-in-picture;
-              "
-              allowfullscreen
-            ></iframe>
-          </div>
-        </div>
       </div>
     </section>
 
