--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- Tailwind CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <script defer src="/_vercel/insights/script.js"></script>
 
     <!-- Tailwind custom config (equivale ao tailwind.config.js) -->
     <script>
