--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           class="text-4xl md:text-6xl lg:text-7xl font-bold leading-tight mb-6 animate-fade-up"
         >
           Pare de estudar inglês.<br />
-          <span class="text-glow-purple glow-purple-text">Comece a falar.</span>
+          <span class="text-glow-purple glow-purple-text">Comece a viver.</span>
         </h1>
 
         <p class="text-lg md:text-xl text-gray-400 max-w-2xl mx-auto mb-10">
@@ -181,8 +181,8 @@
       <div class="relative z-10 max-w-6xl mx-auto px-6">
         <div class="text-center max-w-2xl mx-auto mb-20">
           <h2 class="text-3xl md:text-5xl font-bold mb-4">
-            Por que essa mentoria
-            <span class="text-glow-purple glow-purple-text">funciona?</span>
+            Tudo o que você precisa para alcançar a
+            <span class="text-glow-purple glow-purple-text">fluência</span>
           </h2>
           <p class="text-gray-400">
             Um método pensado para quem quer resultado, não certificado.
