--- a/index.html
+++ b/index.html
@@ -261,13 +261,12 @@
 
       <div class="relative z-10 max-w-4xl mx-auto px-6 text-center">
         <h2 class="text-3xl md:text-5xl font-bold mb-6">
-          O diferencial está no
-          <span class="text-glow-purple glow-purple-text">método</span>
+          Aprenda de maneira 
+          <span class="text-glow-purple glow-purple-text">natural</span>
         </h2>
 
         <p class="text-gray-400 mb-12">
-          Não é mais um curso genérico. É uma mentoria pensada para destravar
-          sua comunicação.
+          Não é mais um curso genérico. Receba um caminho previsível até a fluência.
         </p>
 
         <div class="grid sm:grid-cols-2 gap-4 text-left">
